<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    xmlns:app               ="http://schemas.android.com/apk/res-auto"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    android:background      ="@drawable/background_image">


    <Button
        android:id                          ="@+id/control_led_on"
        android:text                        ="@string/on"
        android:layout_width                ="wrap_content"
        android:layout_height               ="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf    ="parent"
        app:layout_constraintTop_toTopOf    ="parent"/>

    <Button
        android:id                          ="@+id/control_led_off"
        android:text                        ="@string/off"
        android:layout_width                ="wrap_content"
        android:layout_height               ="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf    ="parent"
        app:layout_constraintTop_toBottomOf ="@id/control_led_on"/>

    <Button
        android:id                          ="@+id/control_led_disconnect"
        android:text                        ="@string/connect"
        android:layout_width                ="wrap_content"
        android:layout_height               ="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf    ="parent"
        app:layout_constraintTop_toBottomOf ="@id/control_led_off"/>

</androidx.constraintlayout.widget.ConstraintLayout>