<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id=     "@+id/nestedScrollView"
    xmlns:android   ="http://schemas.android.com/apk/res/android"
    xmlns:app       ="http://schemas.android.com/apk/res-auto"
    xmlns:tools     ="http://schemas.android.com/tools"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    android:paddingBottom   ="20dp"
    android:paddingLeft     ="20dp"
    android:paddingRight    ="20dp"
    android:paddingTop      ="20dp"
    tools:context           =".views.ForgotPasswordActivity"
    android:background      ="@drawable/background_image">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width    ="match_parent"
        android:layout_height   ="match_parent"
        android:orientation     ="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:layout_gravity  ="center_horizontal"
            android:layout_marginTop="40dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width    ="match_parent"
            android:layout_height   ="match_parent"
            android:text            ="@string/reset_password"
            android:textSize        ="20sp"
            android:textStyle       ="bold"
            android:textAllCaps     ="true"
            android:textAlignment   ="center"
            android:background      ="@color/white"
            android:textColor       ="@color/black"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width    ="match_parent"
            android:layout_height   ="match_parent"
            android:text            ="@string/message_to_reset_password"
            android:textSize        ="18sp"
            android:textColor       ="@color/black"
            android:textAlignment   ="center"
            android:background      ="@color/white"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id              ="@+id/layout_password"
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id              ="@+id/send_to_email"
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:hint            ="@string/enter_email_address"
                android:inputType       ="textEmailAddress"
                android:maxLines        ="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id              ="@+id/reset_password_button"
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content"
            android:layout_marginTop="40dp"
            android:text            ="@string/send_password_reset" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>