<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android           ="http://schemas.android.com/apk/res/android"
    xmlns:app               ="http://schemas.android.com/apk/res-auto"
    xmlns:tools             ="http://schemas.android.com/tools"
    android:id              ="@+id/nestedScrollView"
    android:layout_width    ="match_parent"
    android:layout_height   ="match_parent"
    android:paddingBottom   ="20dp"
    android:paddingLeft     ="20dp"
    android:paddingRight    ="20dp"
    android:paddingTop      ="20dp"
    tools:context           =".views.LoginActivity"
    android:background      ="@drawable/background_image">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width    ="match_parent"
        android:layout_height   ="match_parent"
        android:orientation     ="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width    ="wrap_content"
            android:layout_height   ="wrap_content"
            android:layout_gravity  ="center_horizontal"
            android:layout_marginTop="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id              ="@+id/text_input_layout_email"
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content"
            android:layout_marginTop="40dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id              ="@+id/sign_in_email"
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content"
            android:hint            ="@string/hint_email"
            android:inputType       ="textEmailAddress"
            android:maxLines        ="1"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id              ="@+id/text_input_layout_password"
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id              ="@+id/sign_in_password"
                android:layout_width    ="match_parent"
                android:layout_height   ="wrap_content"
                android:hint            ="@string/hint_password"
                android:inputType       ="textPassword"
                android:maxLines        ="1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id              ="@+id/reset_password"
                android:layout_width    ="fill_parent"
                android:layout_height   ="wrap_content"
                android:gravity         ="end"
                android:text            ="@string/reset_password"
                android:textSize        ="16sp"
                android:textColor       ="@color/black"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id              ="@+id/app_compat_button_login"
            android:layout_width    ="match_parent"
            android:layout_height   ="wrap_content"
            android:layout_marginTop="40dp"
            android:text            ="@string/text_login" />

        <com.google.android.gms.common.SignInButton
            android:id                              ="@+id/google_sign_in_button"
            android:layout_width                    ="match_parent"
            android:layout_height                   ="wrap_content"
            app:layout_constraintBottom_toBottomOf  ="parent"
            app:layout_constraintEnd_toEndOf        ="parent"
            app:layout_constraintStart_toStartOf    ="parent"
            app:layout_constraintTop_toTopOf        ="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id              ="@+id/text_view_link_register"
            android:layout_width    ="fill_parent"
            android:layout_height   ="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity         ="center"
            android:text            ="@string/text_not_member"
            android:textSize        ="16sp"
            android:textColor       ="@color/black"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>